--- a/hello-react/05.LightSwitchApp.md
+++ b/hello-react/05.LightSwitchApp.md
@@ -1,5 +1,5 @@
 # Light Switch App
-```
+```javascript
 import React, {useState} from 'react';
 
 function LightSwitch() {
@@ -15,5 +15,6 @@ function LightSwitch() {
   );
 }
 export default LightSwitch;
+
 ```
 ---
